--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     
       <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light" id="ftco-navbar" style="background-color: white !important;">
           <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Official Logo for xpratech.com"></a>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.PNG" alt="Official Logo for xpratech.com"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
             </button>
