--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="We deal with the development of website, web application, and mobile application. We are so confident that our developers skills make us the right person for your job.">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="nR5k02-U82iqtfMehcg4MQ97kw4Dd9140XcVocJnvxg" />
     <meta property="og:type" content="page" /> 
     <meta property="og:title" content="Xpratech | Get Your Web & Mobile Solutions At Affordable Prices." />
     <meta property="og:description" content="We deal with the development of website, web application, and mobile application. We are so confident that our developers skills make us the right person for your job." /> 
