--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <span class="subheading">Xpratech Incorporated</span>
                 <h1 class="mb-3"><span>Design,</span> <span>Development</span></h1>
                 <p>We deliver the best service with our great developers ready to help you.</p>
-                <p><a href="#" class="btn btn-primary px-4 py-3">Get in touch</a></p> 
+                <p><a href="/contact.html" class="btn btn-primary px-4 py-3">Get in touch</a></p> 
 	          </div>
 	        </div>
 	    	</div>
@@ -288,7 +288,7 @@
 	          </div>
       		</div>
       		<div class="col-md-3 ftco-animate">
-      			<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-4">Get started now</a></p>
+      			<p class="mb-0"><a href="/contact.html" class="btn btn-primary py-3 px-4">Get started now</a></p>
       		</div>
       	</div>
         <div class="row mb-5">
