--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 						<span class="subheading">Xpratech Incorporated</span>
 						<h1 class="mb-3"><span>About Us</span></h1>
 						<p>Xpratech Incorporated is a freelancing tech company with the aims of providing tech solutions/products to either an individual or organization at affordable prices.</p>
-						<p><a href="#" class="btn btn-primary px-4 py-3">Get in touch</a></p> 
+						<p><a href="/contact.html" class="btn btn-primary px-4 py-3">Get in touch</a></p> 
 					  </div>
 					</div>
 					</div>
@@ -146,7 +146,7 @@
 						</div>
 						</div>
 						<div class="col-md-3 ftco-animate">
-							<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-4">Get started now</a></p>
+							<p class="mb-0"><a href="/contact.html" class="btn btn-primary py-3 px-4">Get started now</a></p>
 						</div>
 					</div>
 				  <div class="row mb-5">
