--- a/contact.html
+++ b/contact.html
@@ -88,12 +88,12 @@
             </div>
             <div class="col-lg-6 py-5 mx-2">
                 <h2 class="h2">Send Message</h2> 
-                <form action="mailto:xpratech@gmail.com" method="post" enctype="text/plain">
+                <form action="https://formspree.io/xlegngow" method="post" enctype="text/plain">
                   <div class="form-group">
                     <input type="text" class="form-control" name="name" placeholder="Your Name">
                   </div>
                   <div class="form-group">
-                    <input type="email" class="form-control" name="email" placeholder="Your Email">
+                    <input type="email" class="form-control" name="_replyto" placeholder="Your Email">
                   </div>
                   <div class="form-group">
                     <input type="text" class="form-control" name="subject" placeholder="Subject">
