--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
             </div>
             <div class="col-lg-6 py-5 mx-2">
                 <h2 class="h2">Send Message</h2> 
-                <form action="https://formspree.io/xlegngow" method="post" enctype="text/plain">
+                <form action="https://formspree.io/xlegngow" method="post" id="my-form">
                   <div class="form-group">
                     <input type="text" class="form-control" name="name" placeholder="Your Name">
                   </div>
@@ -102,7 +102,10 @@
                     <textarea name="" id="" cols="30" rows="7" class="form-control" name="message" placeholder="Message"></textarea>
                   </div>
                   <div class="form-group">
-                    <input type="submit" value="Send Message" name="submit" class="btn btn-primary py-3 px-5" style="border-radius: 0%;">
+                    <input type="submit" id="my-form-button" value="Send Message" name="submit" class="btn btn-primary py-3 px-5" style="border-radius: 0%;">
+                  </div>
+                  <div class="form-group">
+                      <p id="my-form-status"></p>
                   </div>
                 </form> 
             </div>
@@ -178,7 +181,53 @@
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#6927ff"/></svg></div>
     
-    
+    <script>
+        window.addEventListener("DOMContentLoaded", function() {
+
+          // get the form elements defined in your form HTML above
+
+          var form = document.getElementById("my-form");
+          var button = document.getElementById("my-form-button");
+          var status = document.getElementById("my-form-status");
+
+          // Success and Error functions for after the form is submitted
+
+          function success() {
+            form.reset();
+            button.style = "display: none ";
+            status.innerHTML = "Thanks!";
+          }
+
+          function error() {
+            status.innerHTML = "Oops! There was a problem.";
+          }
+
+          // handle the form submission event
+
+          form.addEventListener("submit", function(ev) {
+            ev.preventDefault();
+            var data = new FormData(form);
+            ajax(form.method, form.action, data, success, error);
+          });
+        });
+
+        // helper function for sending an AJAX request
+
+        function ajax(method, url, data, success, error) {
+          var xhr = new XMLHttpRequest();
+          xhr.open(method, url);
+          xhr.setRequestHeader("Accept", "application/json");
+          xhr.onreadystatechange = function() {
+            if (xhr.readyState !== XMLHttpRequest.DONE) return;
+            if (xhr.status === 200) {
+              success(xhr.response, xhr.responseType);
+            } else {
+              error(xhr.status, xhr.response, xhr.responseType);
+            }
+          };
+          xhr.send(data);
+        }
+      </script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
