--- a/contact.html
+++ b/contact.html
@@ -99,13 +99,16 @@
                     <input type="text" class="form-control" name="subject" placeholder="Subject">
                   </div>
                   <div class="form-group">
-                    <textarea name="" id="" cols="30" rows="7" class="form-control" name="message" placeholder="Message"></textarea>
+                    <textarea cols="30" rows="7" class="form-control" name="message" placeholder="Message"></textarea>
                   </div>
                   <div class="form-group">
                     <input type="submit" id="my-form-button" value="Send Message" name="submit" class="btn btn-primary py-3 px-5" style="border-radius: 0%;">
                   </div>
                   <div class="form-group">
+                    <div class="alert alert-success">
                       <p id="my-form-status"></p>
+                      <button class="close" data-dismiss="alert">&times;</button>
+                    </div> 
                   </div>
                 </form> 
             </div>
@@ -195,7 +198,7 @@
           function success() {
             form.reset();
             button.style = "display: none ";
-            status.innerHTML = "Thanks!";
+            status.innerHTML = "Thanks! Your message has been sent successfully. We'll reply as soon as possible.";
           }
 
           function error() {
