--- a/contact.html
+++ b/contact.html
@@ -105,10 +105,7 @@
                     <input type="submit" id="my-form-button" value="Send Message" name="submit" class="btn btn-primary py-3 px-5" style="border-radius: 0%;">
                   </div>
                   <div class="form-group">
-                    <div class="alert alert-success">
-                      <p id="my-form-status"></p>
-                      <button class="close" data-dismiss="alert">&times;</button>
-                    </div> 
+                    <p id="my-form-status"></p> 
                   </div>
                 </form> 
             </div>
@@ -198,7 +195,8 @@
           function success() {
             form.reset();
             button.style = "display: none ";
-            status.innerHTML = "Thanks! Your message has been sent successfully. We'll reply as soon as possible.";
+            status.innerHTML = "<div class='alert alert-success'>Thanks! Your message has been sent successfully. We'll reply as soon as possible.<button class='close' data-dismiss='alert'>x</button>
+                    </div>";
           }
 
           function error() {
