--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                     <input type="submit" id="my-form-button" value="Send Message" name="submit" class="btn btn-primary py-3 px-5" style="border-radius: 0%;">
                   </div>
                   <div class="form-group">
-                    <p id="my-form-status"></p> 
+                    <div id="my-form-status"></div> 
                   </div>
                 </form> 
             </div>
@@ -195,8 +195,7 @@
           function success() {
             form.reset();
             button.style = "display: none ";
-            status.innerHTML = "<div class='alert alert-success'>Thanks! Your message has been sent successfully. We'll reply as soon as possible.<button class='close' data-dismiss='alert'>x</button>
-                    </div>";
+            status.innerHTML = "<div class='alert alert-success'>Thanks! Your message has been sent successfully. We'll reply as soon as possible.< button class='close' data-dismiss='alert'>&times;</button></div>";
           }
 
           function error() {
