--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
             </div>
             <div class="col-md">
               <div class="ftco-footer-widget mb-4 ml-md-5">
-                <h2 class="ftco-heading-2">Unseful Links</h2>
+                <h2 class="ftco-heading-2">Useful Links</h2>
                 <ul class="list-unstyled">
                   <li><a href="index.html" class="py-2 d-block">Home</a></li>
                   <li><a href="portfolio.html" class="py-2 d-block">Portfolio</a></li>
