--- a/contact.html
+++ b/contact.html
@@ -90,16 +90,16 @@
                 <h2 class="h2">Send Message</h2> 
                 <form action="https://formspree.io/xlegngow" method="post" id="my-form">
                   <div class="form-group">
-                    <input type="text" class="form-control" name="name" placeholder="Your Name">
+                    <input type="text" class="form-control" name="name" placeholder="Your Name" required>
                   </div>
                   <div class="form-group">
-                    <input type="email" class="form-control" name="_replyto" placeholder="Your Email">
+                    <input type="email" class="form-control" name="_replyto" placeholder="Your Email" required>
                   </div>
                   <div class="form-group">
-                    <input type="text" class="form-control" name="subject" placeholder="Subject">
+                    <input type="text" class="form-control" name="subject" placeholder="Subject" required>
                   </div>
                   <div class="form-group">
-                    <textarea cols="30" rows="7" class="form-control" name="message" placeholder="Message"></textarea>
+                    <textarea cols="30" rows="7" class="form-control" name="message" placeholder="Message" required></textarea>
                   </div>
                   <div class="form-group">
                     <input type="submit" id="my-form-button" value="Send Message" name="submit" class="btn btn-primary py-3 px-5" style="border-radius: 0%;">
