--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                   </div>
                   <div class="text">
                     <p class="mb-4">I'm frontend programmer that put creativity in all web solutions that comes our way here at xpratech incorporated.</p>
-                    <p class="name">Samuel Monday</p> 
+                    <p class="name">Samuel Joseph M.</p> 
                     <span class="position">Front-End Developer</span>
                   </div>
                 </div>
@@ -337,7 +337,7 @@
           </div>
         </div>
       </div>
-      <div class="text-center text-white"> &copy; 2019 <b>XpraTech Incorporated</b>. All Right Reserved.</div>
+      <div class="text-center text-white"> &copy; 2019 - 2020 <b>XpraTech Incorporated</b>. All Right Reserved.</div>
     </footer>
     
   
