--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,7 @@
             </div>
           </div>
         </div>
-        <div class="text-center text-white"> &copy; 2019 <b>XpraTech Incorporated</b>. All Right Reserved.</div>
+        <div class="text-center text-white"> &copy; 2019 - 2020 <b>XpraTech Incorporated</b>. All Right Reserved.</div>
       </footer>
       
     
