--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
 					</div>
 				  </div>
 				</div>
-				<div class="text-center text-white"> &copy; 2019 <b>XpraTech Incorporated</b>. All Right Reserved.</div>
+				<div class="text-center text-white"> &copy; 2019 - 2020 <b>XpraTech Incorporated</b>. All Right Reserved.</div>
 			  </footer>
 	<!-- loader -->
 	<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#6927ff"/></svg></div>
